Fix overflow issue with SelectField

--- a/css/editor.css
+++ b/css/editor.css
@@ -163,6 +163,10 @@
   transform: perspective(1px) scale(0.75) translate3d(0, -18px, 0);
   transform-origin: left top;
 }
+.Editor-selectField > div:nth-of-type(2) > div {
+  overflow: scroll;
+}
+
 .Editor-permanentEtikett > label:first-child {
   color: rgba(0, 0, 0, 0.5) !important;
   transform: perspective(1px) scale(0.75) translate3d(0, -18px, 0) !important;
